; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/usb/host/extr_xhci-mem.c_xhci_clear_endpoint_bw_info.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/usb/host/extr_xhci-mem.c_xhci_clear_endpoint_bw_info.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.xhci_bw_info = type { i64, i64, i64, i64, i64, i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @xhci_clear_endpoint_bw_info(%struct.xhci_bw_info* %0) #0 {
  %2 = alloca %struct.xhci_bw_info*, align 8
  store %struct.xhci_bw_info* %0, %struct.xhci_bw_info** %2, align 8
  %3 = load %struct.xhci_bw_info*, %struct.xhci_bw_info** %2, align 8
  %4 = getelementptr inbounds %struct.xhci_bw_info, %struct.xhci_bw_info* %3, i32 0, i32 5
  store i64 0, i64* %4, align 8
  %5 = load %struct.xhci_bw_info*, %struct.xhci_bw_info** %2, align 8
  %6 = getelementptr inbounds %struct.xhci_bw_info, %struct.xhci_bw_info* %5, i32 0, i32 4
  store i64 0, i64* %6, align 8
  %7 = load %struct.xhci_bw_info*, %struct.xhci_bw_info** %2, align 8
  %8 = getelementptr inbounds %struct.xhci_bw_info, %struct.xhci_bw_info* %7, i32 0, i32 3
  store i64 0, i64* %8, align 8
  %9 = load %struct.xhci_bw_info*, %struct.xhci_bw_info** %2, align 8
  %10 = getelementptr inbounds %struct.xhci_bw_info, %struct.xhci_bw_info* %9, i32 0, i32 2
  store i64 0, i64* %10, align 8
  %11 = load %struct.xhci_bw_info*, %struct.xhci_bw_info** %2, align 8
  %12 = getelementptr inbounds %struct.xhci_bw_info, %struct.xhci_bw_info* %11, i32 0, i32 1
  store i64 0, i64* %12, align 8
  %13 = load %struct.xhci_bw_info*, %struct.xhci_bw_info** %2, align 8
  %14 = getelementptr inbounds %struct.xhci_bw_info, %struct.xhci_bw_info* %13, i32 0, i32 0
  store i64 0, i64* %14, align 8
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
